--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <!-- Google Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-        <!-- Icons -->
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+        <!-- Icon -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <!-- Favicon -->
         <link rel="shortcut icon" href="assets/favicon.ico?v=1" type="image/x-icon">
@@ -55,7 +55,7 @@
             </form>
         </div>
         <div id="backgroundEditWindow"></div>
-        <footer>Desenvolvido por Caio Vinícius &#129312;</footer>
+        <footer>Desenvolvido por <a href="http://github.com/CaioMelo00" target="_blank" rel="noopener noreferrer">Caio Vinícius</a> &#129312;</footer>
 
         <script src="script/script.js"></script>
     </body>
